# fortress

./: .gitignore  .mcp.json  CLAUDE.md  CODEBUDDY.md  README.md  SKILL.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: test.yml
docs/: PROJECT.md  SKILL_USAGE.md
docs/ideas/: agent-encapsulation.md
docs/specs/: 01-system-spec.md  02-architecture.md  03-logging-spec.md  03-phase2-data-layer.md  04-category-benchmark-spec.md  04-phase4-agent-layer.md  05-category-benchmark-plan.md  06-unified-scoring-spec.md  07-unified-scoring-plan.md  08-unified-scoring-tasks.md  09-discover-funds-spec.md  10-discover-funds-plan.md
scripts/: bulk_topup.py  healthcheck.py  init_db.py  sequential_backfill.py
src/: datatypes.py  logging_config.py
src/agent/: graph.py  llm.py  prompts.py  signals.py  state.py
src/data/: cache.py  market.py  portfolio_db.py
src/engine/: allocation.py  auditor.py  category_benchmark.py  health_checker.py  institutional_consensus.py  ledger.py  macro_overlay.py  optimizer.py  peer_scoring.py  risk_personalization.py  risk_profile.py  screener.py  stress_tester.py
src/redlines/: hard_rules.py  personal_rules.py
src/report/: context.py
src/tools/: __main__.py  a2a_adapter.py  advisory.py  advisory_agents.py  audit.py  discover.py  export.py  health.py  macro.py  market.py  personal_rules.py  portfolio.py  (+5 more)
tasks/: plan-ci.md  plan-fix-bugs.md  plan-llm-debater.md  plan-llm-fix.md  plan-phase4-7.md  plan-screener-v2.md  plan.md  todo.md
tests/: conftest.py  test_datatypes.py  test_logging_config.py
(+52 files in other folders)
