[project]
name = "fortress"
version = "0.1.0"
description = "AI 投资顾问 Agent Skill — 对话式基金/ETF 组合管理"
requires-python = ">=3.12"
dependencies = [
    "akshare>=1.16",
    "langgraph>=0.4",
    "mcp>=1.0",
    "riskfolio-lib>=7.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=6",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: tests that require real network calls",
]

[tool.ruff]
target-version = "py312"
